--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -7,6 +7,8 @@ block content
     div.form-group
       label(for='name') Name:
       input#name.form-control(type='text', name='name', value=(undefined === category? '' | category.name))
+      input#name.form-control(type='text', name='image', value=(undefined === category? '' | category.image))
+
     button.btn.btn-primary(type='submit') Submit
 
   if errors
