--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -6,8 +6,8 @@ block content
   form(method='POST' action='')
     div.form-group
       label(for='name') Name:
-      input#name.form-control(type='text', name='name', value=(undefined === category? '' | category.name))
-      input#name.form-control(type='text', name='image', value=(undefined === category? '' | category.image))
+      input#name.form-control(type='text', name='name' value=(undefined === category? '' | category.name))
+      input#name.form-control(type='text', name='image' value=(undefined === category? '' | category.image))
 
     button.btn.btn-primary(type='submit') Submit
 
