--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -7,8 +7,11 @@ block content
     div.form-group
       label(for='name') Name:
       input#name.form-control(type='text', name='name' value=(undefined === category? '' : category.name))
+      br
+      label(for='image') Image:
       input#name.form-control(type='text', name='image' value=(undefined === category? '' : category.image))
-
+      br
+      br
     button.btn.btn-primary(type='submit') Submit
 
   if errors
