--- a/views/category_form.pug
+++ b/views/category_form.pug
@@ -8,8 +8,11 @@ block content
       label(for='name') Name:
       input#name.form-control(type='text', name='name' value=(undefined === category? '' : category.name))
       br
+      label(for='description') Description:
+      input#description.form-control(type='text', name='description' value=(undefined === category? '' : category.description))
+      br
       label(for='image') Image:
-      input#name.form-control(type='text', name='image' value=(undefined === category? '' : category.image))
+      input#image.form-control(type='text', name='image' value=(undefined === category? '' : category.image))
       br
       br
     button.btn.btn-primary(type='submit') Submit
